samples/_failures_safe/1761714303_b2f0bf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_23ce5e60.c: In function ‘main’:
./samples/SAFE/__tmp_23ce5e60.c:154:19: error: expected ‘]’ at end of input
  154 |     char input[102
      |                   ^
      |                   ]
./samples/SAFE/__tmp_23ce5e60.c:154:5: error: expected declaration or statement at end of input
  154 |     char input[102
      |     ^~~~
